# oellm_pretrain

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  example_config_lumi.yaml  qwen3_A3B_30B.yaml  qwen3_like_A400M_2B.yaml
oellm_pretrain/: main.py  setup_leonardo.sh  setup_lumi.sh  template.sbatch  template_lumi.sbatch
oellm_pretrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
