[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oellm_pretrain"]
exclude = ["config"]

[project]
name = "oellm-pretrain"
version = "0.1.0"
description = "Utilities to launch Megatron-LM training sweeps via SLURM"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
oellm-pretrain = "oellm_pretrain.main:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]